tests/models/enum/unnamed/vec/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_length = 2)]
        Vec<()>
    ),
}
fn main() {}
